Preview Message Overlap Fix

--- a/src/components/insidecomponent/css/Messages.css
+++ b/src/components/insidecomponent/css/Messages.css
@@ -36,6 +36,7 @@
 
 .preview_message{
     color: rgb(87, 86, 86);
+    word-wrap: break-word;
 }
 
 #h3_label_m{
